Separated MotionCapture class from FrameCapture class

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=
 category=Other
 url=https://github.com/simondlevy/PAA3905
 architectures=*
-includes=PAA3905.h
+includes=PAA3905_MotionCapture.h, PAA3905_FrameCapture.h
